# picozerotest

./: CMakeLists.txt  FreeRTOSConfig.h  bind-pico.sh  can.sh  clean_generated.py  image_to_array.py
.github/workflows/: build.yml
can2040/: can2040.c  can2040.h  can2040.pio
src/: can.cpp  can.h  consts.h  disp_config.h  fifo.cpp  fifo.h  gs_usb_task.cpp  gs_usb_task.h  picozerotest.cpp  quadrature.pio  rev.cpp  rev.h  revconsts.h  sh1106.cpp  sh1106.h  sh1106_config.h  sh1106_regs.h  ssd1306.cpp  ssd1306.h  ssd1306_font.h  ssd1306_regs.h  tusb_config.h  u8g2_oled.cpp  u8g2_oled.h  usb_descriptors.c  ws2812.pio
